--- a/signup.html
+++ b/signup.html
@@ -43,6 +43,7 @@
                 <p id="successMessage"></p> <!-- Added success/error message display -->
             </form>
             <p>Already have an account? <a href="login.html" class="signup-link">Login</a></p>
+            <p id="successMessage" style="color: red; font-weight: bold;"></p>
         </section>
     </main>
     <footer>
