--- a/login.html
+++ b/login.html
@@ -22,15 +22,15 @@
     <main>
         <section class="login">
             <h2>Login to Your Account</h2>
-            <form action="/login" method="post">
+            <form id="loginForm">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
                 <span class="error-message" id="emailError"></span>
-                
+
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
                 <span class="error-message" id="passwordError"></span>
-                
+
                 <button type="submit" class="cta">Login</button>
                 <p id="successMessage"></p> <!-- For success/error messages -->
             </form>
