--- a/login.html
+++ b/login.html
@@ -46,5 +46,6 @@
         </ul>
         <p>&copy; 2023 Black Bank. All rights reserved.</p>
     </footer>
+    <script src="login.js" defer></script>
 </body>
 </html>
