--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         </ul>
         <p>&copy; 2023 Black Bank. All rights reserved.</p>
     </footer>
-    <script scr="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
