--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Black Bank - Home</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
